--- a/index.html
+++ b/index.html
@@ -7,7 +7,82 @@
     <style>
         body {
             font-family: 'Georgia', serif;
-            background-color: #f5f5f5;
+            background-color: #f4f1ea;
             color: #333;
             margin: 0;
-            padding
+            padding: 0;
+            line-height: 1.6;
+        }
+
+        header {
+            background-color: #333;
+            color: #f4f1ea;
+            padding: 1rem 0;
+            text-align: center;
+            font-size: 1.8rem;
+        }
+
+        main {
+            padding: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: justify;
+        }
+
+        .quote {
+            font-style: italic;
+            margin: 2rem 0;
+            border-left: 4px solid #555;
+            padding-left: 1rem;
+        }
+
+        footer {
+            background-color: #333;
+            color: #f4f1ea;
+            text-align: center;
+            padding: 1rem 0;
+            font-size: 0.9rem;
+        }
+
+        a {
+            color: #007acc;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        Filosofia e Reflexões
+    </header>
+    <main>
+        <h1>Bem-vindo ao mundo das ideias</h1>
+        <p>Este é um espaço para explorar reflexões profundas, ideias transformadoras e as grandes questões que moldam nossa existência.</p>
+
+        <div class="quote">
+            "A vida não examinada não vale a pena ser vivida."  
+            <br>— Sócrates
+        </div>
+
+        <h2>Explorando conceitos</h2>
+        <p>A filosofia busca responder às perguntas fundamentais sobre a vida, o universo e tudo mais. De Platão a Nietzsche, cada filósofo nos convida a repensar o mundo ao nosso redor.</p>
+
+        <div class="quote">
+            "O homem é a medida de todas as coisas."  
+            <br>— Protágoras
+        </div>
+
+        <h3>Links úteis</h3>
+        <ul>
+            <li><a href="https://plato.stanford.edu/" target="_blank">Stanford Encyclopedia of Philosophy</a></li>
+            <li><a href="https://iep.utm.edu/" target="_blank">Internet Encyclopedia of Philosophy</a></li>
+        </ul>
+    </main>
+    <footer>
+        © 2024 | Criado com amor à filosofia.
+    </footer>
+</body>
+</html>
